# EvaluationBERT

./: .gitignore  README.md  run.ipynb
ViGLUE/: README.md  generate_glue_submission.py  generate_mock_submissions.py  pyproject.toml  requirements.txt  run_baseline.py  run_experiments.py  run_viglue.py
ViGLUE/config/: __init__.py  task_config.py  training_config.py
ViGLUE/scripts/: run_all_tasks.sh  run_all_tasks_multigpu.sh  run_baseline_all.sh  run_multiple_seeds.sh  run_single_task.sh
ViGLUE/trainers/: __init__.py  base_trainer.py  evaluator.py
ViGLUE/utils/: __init__.py  data_loader.py  logging_utils.py  metrics.py  model_utils.py  submission_utils.py
perplexity/: evaluate_perplexity.py  pyproject.toml  requirements.txt
