[project]
name = "viglue-evaluation"
version = "0.1.0"
description = "Vietnamese General Language Understanding Evaluation (ViGLUE) benchmark"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.48.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "tokenizers>=0.13.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "accelerate>=0.20.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "trainers", "utils"]


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312" 

[tool.black]
line-length = 120
target-version = ["py312"]
